--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>JS + CSS Clock</title>
-    <link rel="shortcut icon" href="asset/clock.png" type="image/x-icon">
-    <link rel="stylesheet" href="asset/style.css">
-    <script src="asset/script.js" defer></script>
-</head>
-<body>
-
-<div class="clock">
-    <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
-    </div>
-</div>
-<div class="attribution">
-    <p>Coded by <a href="https://github.com/ujjwalgarg100204">Ujjwal Garg</a>.</p>
-    <a href="https://www.flaticon.com/free-icons/clock" title="clock icons">Clock icons created by Freepik -
-        Flaticon</a>
-</div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>JS + CSS Clock</title>
+		<link
+			rel="shortcut icon"
+			href="./asset/clock.png"
+			type="image/x-icon"
+		/>
+		<link rel="stylesheet" href="./asset/style.css" />
+		<script src="https://cdn.tailwindcss.com"></script>
+		<script src="asset/script.js" defer></script>
+	</head>
+	<body>
+		<div class="clock">
+			<div class="clock-face">
+				<div class="hand hour-hand"></div>
+				<div class="hand min-hand"></div>
+				<div class="hand second-hand"></div>
+			</div>
+		</div>
+		<div class="attribution">
+			<p>
+				Coded by
+				<a href="https://github.com/ujjwalgarg100204">Ujjwal Garg</a>.
+			</p>
+			<a
+				href="https://www.flaticon.com/free-icons/clock"
+				title="clock icons"
+				>Clock icons created by Freepik - Flaticon</a
+			>
+		</div>
+	</body>
 </html>
